# py-espi-ebi-pap-api

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: flake8-lint.yml
pyespiebipap/: __init__.py  common.py  entry.py  espi_parser.py  node.py  parse_node.py
pyespiebipapapi/: __init__.py  common.py  constants.py  ebi_parser.py  espi_parser.py  node.py  type_defs.py
